--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum nihil <br>ut libero maxime aut possimus a officiis. Laudantium, magnam! Ratione!</h1>
         <div class="imge-div">
-            <img src="https://i.imgur.com/lus3hWV.jpg" alt="cat" width="400px" height="auto"><br>
+            <img src="https://i.imgur.com/lus3hWV.jpg" alt="cat" width="400px" height="auto">
             <img src="https://i.imgur.com/vfbFEif.jpg" alt="cat" width="400px" height="auto">
         </div>
 
@@ -42,13 +42,27 @@
         </tr>
         <tr>
             <td>a</td>
+            <td rowspan="3">b</td>
+        </tr>
+        <tr>
+            <td>c</td>
+        </tr>
+        <tr>
+            <td>c</td>
+        </tr>
+        <tr>
+            <td>a</td>
             <td>b</td>
         </tr>
         <tr>
-            <td  colspan="2">ccccc</td>
+            <td>c</td>
+            <td>c</td>
+        </tr>
+        <tr>
+            <td  colspan="3">c</td>
         </tr>
     </table>
-    
+    <input placeholder="12345">
 
 </body>
 </html>
