--- a/index.html
+++ b/index.html
@@ -9,28 +9,30 @@
   </head>
   <body>
     <div class="container">
-      <h1>This is h1</h1>
-      <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia quidem
-        dolorem aperiam corporis omnis ratione, perferendis ut eligendi, sed
-        porro, fuga voluptatum excepturi quo ducimus. Sed nisi necessitatibus
-        nulla exercitationem.
-      </p>
-      <h2>This is h2</h2>
-      <h3>This is h3</h3>
-      <h4>This is h4</h4>
-      <h5>This is h5</h5>
-      <h6>This is h6</h6>
-      <em>168</em><br />
-      <strong>Strong font</strong><br />
-      <b>Bold font</b><br />
-      <i>Italic font</i><br />
+      <div class="text">
+        <h1>This is h1</h1>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia quidem
+          dolorem aperiam corporis omnis ratione, perferendis ut eligendi, sed
+          porro, fuga voluptatum excepturi quo ducimus. Sed nisi necessitatibus
+          nulla exercitationem.
+        </p>
+        <h2>This is h2</h2>
+        <h3>This is h3</h3>
+        <h4>This is h4</h4>
+        <h5>This is h5</h5>
+        <h6>This is h6</h6>
+        <em>168</em><br />
+        <strong>Strong font</strong><br />
+        <b>Bold font</b><br />
+        <i>Italic font</i><br />
+        <h1>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum nihil
+          <br />ut libero maxime aut possimus a officiis. Laudantium, magnam!
+          Ratione!
+        </h1>
+      </div>
 
-      <h1>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum nihil
-        <br />ut libero maxime aut possimus a officiis. Laudantium, magnam!
-        Ratione!
-      </h1>
       <div class="image-div">
         <img
           src="https://i.imgur.com/lus3hWV.jpg"
