--- a/exmple.html
+++ b/exmple.html
@@ -1,28 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="aaa.css">
-      
-    <title>jacky</title>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="aaa.css" />
+
+  <title>example</title>
 </head>
+
 <body>
-    <div class="container">
-        <div class="box1">
-            <h1>hello world</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus excepturi hic quos possimus, laudantium quia cupiditate aut vitae doloremque 
-            error nostrum vel ad provident distinctio dolore quasi, adipisci amet quae.
-            </p>
-        </div>
-        <div class="box2">
-            <h1>hello </h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus excepturi hic quos possimus, laudantium quia cupiditate aut vitae doloremque 
-            error nostrum vel ad provident distinctio dolore quasi, adipisci amet quae.
-            </p>
-        </div>
+  <div class="container">
+    <div class="box1">
+      <h1>hello world</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus
+        excepturi hic quos possimus, laudantium quia cupiditate aut vitae
+        doloremque error nostrum vel ad provident distinctio dolore quasi,
+        adipisci amet quae.
+      </p>
     </div>
-        
+    <div class="box2">
+      <h1>hello</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus
+        excepturi hic quos possimus, laudantium quia cupiditate aut vitae
+        doloremque error nostrum vel ad provident distinctio dolore quasi,
+        adipisci amet quae.
+      </p>
+    </div>
+  </div>
 </body>
+
 </html>
