--- a/index.html
+++ b/index.html
@@ -1,91 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>My Page</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="text">
-        <h1>This is h1</h1>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia quidem
-          dolorem aperiam corporis omnis ratione, perferendis ut eligendi, sed
-          porro, fuga voluptatum excepturi quo ducimus. Sed nisi necessitatibus
-          nulla exercitationem.
-        </p>
-        <h2>This is h2</h2>
-        <h3>This is h3</h3>
-        <h4>This is h4</h4>
-        <h5>This is h5</h5>
-        <h6>This is h6</h6>
-        <em>168</em><br />
-        <strong>Strong font</strong><br />
-        <b>Bold font</b><br />
-        <i>Italic font</i><br />
-        <h1>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum nihil
-          <br />ut libero maxime aut possimus a officiis. Laudantium, magnam!
-          Ratione!
-        </h1>
-      </div>
 
-      <div class="image-div">
-        <img
-          src="https://i.imgur.com/lus3hWV.jpg"
-          alt="cat"
-          width="400px"
-          height="auto"
-        />
-        <img
-          src="https://i.imgur.com/vfbFEif.jpg"
-          alt="cat"
-          width="400px"
-          height="auto"
-        />
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>My Page</title>
+</head>
 
-      <!-- <a href="https://www.google.com.tw/">Google</a> -->
-      <a href="https://www.google.com.tw/"
-        ><img src="cat2.jpg" alt="cat" width="400px" height="auto"
-      /></a>
-
-      <ul>
-        <li>potato</li>
-        <li>Watermelon</li>
-      </ul>
-
-      <table border="3">
-        <tr>
-          <th>name</th>
-          <th>gender</th>
-        </tr>
-        <tr>
-          <td>a</td>
-          <td rowspan="3">b</td>
-        </tr>
-        <tr>
-          <td>c</td>
-        </tr>
-        <tr>
-          <td>c</td>
-        </tr>
-        <tr>
-          <td>a</td>
-          <td>b</td>
-        </tr>
-        <tr>
-          <td>c</td>
-          <td>c</td>
-        </tr>
-        <tr>
-          <td colspan="3">c</td>
-        </tr>
-      </table>
-      <input type="button" value="168" onclick="" />
+<body>
+  <div class="container">
+    <div class="text">
+      <h1>This is h1</h1>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia quidem
+        dolorem aperiam corporis omnis ratione, perferendis ut eligendi, sed
+        porro, fuga voluptatum excepturi quo ducimus. Sed nisi necessitatibus
+        nulla exercitationem.
+      </p>
+      <h2>This is h2</h2>
+      <h3>This is h3</h3>
+      <h4>This is h4</h4>
+      <h5>This is h5</h5>
+      <h6>This is h6</h6>
+      <em>168</em><br />
+      <strong>Strong font</strong><br />
+      <b>Bold font</b><br />
+      <i>Italic font</i><br />
+      <h1>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum nihil
+        <br />ut libero maxime aut possimus a officiis. Laudantium, magnam!
+        Ratione!
+      </h1>
     </div>
-  </body>
+
+    <div class="image-div">
+      <img src="https://i.imgur.com/lus3hWV.jpg" alt="cat" width="400px" height="auto" />
+      <img src="https://i.imgur.com/vfbFEif.jpg" alt="cat" width="400px" height="auto" />
+    </div>
+
+    <!-- <a href="https://www.google.com.tw/">Google</a> -->
+    <a href="https://www.google.com.tw/"><img src="cat2.jpg" alt="cat" width="400px" height="auto" /></a>
+
+    <ul>
+      <li>Potato</li>
+      <li>Watermelon</li>
+    </ul>
+
+    <table border="3">
+      <tr>
+        <th>name</th>
+        <th>gender</th>
+      </tr>
+      <tr>
+        <td>a</td>
+        <td rowspan="3">b</td>
+      </tr>
+      <tr>
+        <td>c</td>
+      </tr>
+      <tr>
+        <td>c</td>
+      </tr>
+      <tr>
+        <td>a</td>
+        <td>b</td>
+      </tr>
+      <tr>
+        <td>c</td>
+        <td>c</td>
+      </tr>
+      <tr>
+        <td colspan="3">c</td>
+      </tr>
+    </table>
+    <input type="button" value="168" onclick="" />
+  </div>
+</body>
+
 </html>
