--- a/exmple.html
+++ b/exmple.html
@@ -12,23 +12,27 @@
 
 <body>
   <div class="container">
-    <div class="box1">
-      <h1>hello world</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus
-        excepturi hic quos possimus, laudantium quia cupiditate aut vitae
-        doloremque error nostrum vel ad provident distinctio dolore quasi,
-        adipisci amet quae.
-      </p>
+    <div class="section">
+      <div class="box1">
+        <h1>hello world</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus
+          excepturi hic quos possimus, laudantium quia cupiditate aut vitae
+          doloremque error nostrum vel ad provident distinctio dolore quasi,
+          adipisci amet quae.
+        </p>
+      </div>
     </div>
-    <div class="box2">
-      <h1>hello</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus
-        excepturi hic quos possimus, laudantium quia cupiditate aut vitae
-        doloremque error nostrum vel ad provident distinctio dolore quasi,
-        adipisci amet quae.
-      </p>
+    <div class="section">
+      <div class="box2">
+        <h1>hello</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus
+          excepturi hic quos possimus, laudantium quia cupiditate aut vitae
+          doloremque error nostrum vel ad provident distinctio dolore quasi,
+          adipisci amet quae.
+        </p>
+      </div>
     </div>
   </div>
 </body>
